package comportamental.br.edu.ifs.designpatterns.command;

public interface Comando {
    public void executar();
}
